--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: gptbots
     env: python
     buildCommand: "pip install -r requirements.txt$
-    startCommand: "gunicorn gptbots:app"
+    startCommand: "gunicorn app"
     envVars:
       - key: DISCORD_BOT_TOKEN
         sync: false 
